--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,23 +2,16 @@ spring:
   jackson:
     default-property-inclusion: non_null
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        temp:
-          use_jdbc_metadata_defaults : false
+    database: POSTGRESQL
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   datasource:
     #    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1 # this one is in memory
-    url: jdbc:h2:./h2/heroes;AUTO_SERVER=TRUE # this one is on the disk, notice the h2 folder and contents it creates
-    driverClassName: org.h2.Driver
-    username: sa
-    password: sa
-  h2:
-    console:
-      #      this enables http://localhost:8080/h2-console
-      enabled: true
+    url: jdbc:postgresql://localhost:5432/programm # this one is on the disk, notice the h2 folder and contents it creates
+    driverClassName: org.postgresql.Driver
+    username: postgres
+    password: password
+    platform: POSTGRES
 logging:
   file:
     path: ./logs
