--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database: POSTGRESQL
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   datasource:
     #    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1 # this one is in memory
     url: jdbc:postgresql://localhost:5432/programm # this one is on the disk, notice the h2 folder and contents it creates
