--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,8 +9,7 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    #    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1 # this one is in memory
-    url: jdbc:postgresql://localhost:5432/programm # this one is on the disk, notice the h2 folder and contents it creates
+    url: jdbc:postgresql://localhost:5432/programm
     driverClassName: org.postgresql.Driver
     username: postgres
     password: password
