--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 	compile 'io.springfox:springfox-boot-starter:3.0.0'
+	compile 'org.springframework.boot:spring-boot-starter-mail'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
