--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,18 @@ server:
   servlet:
     context-path: /api
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: taltechdonalds@gmail.com
+    password: taltechdonalds2020
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
   jackson:
     default-property-inclusion: non_null
   jpa:
