--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,3 @@
-
-
- 
 stages:
   - build
   - test
@@ -41,5 +38,5 @@ deploy donald:
     - mkdir -p ~/api-deployment # mkdir make folder api-deployment ~/ is under current user directory so for gitlab it would be /home/gitlab/api-deployment
     - rm -rf ~/api-deployment/* # rm remove -rf is recursive files from api-deployment
     - cp -r build/libs/. ~/api-deployment # cp - copy build/libs is where
-    - sudo service heroes restart  # this requires sudo rights for gitlab user
+    - sudo service taltech-donald restart  # this requires sudo rights for gitlab user
 
