--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,3 @@
-services:
-  - postgres:12.2-alpine
-
-variables:
-  POSTGRES_DB: echo $POSTGRES_DB
-  POSTGRES_USER: echo $POSTGRES_USER
-  POSTGRES_PASSWORD: echo $POSTGRES_PASSWORD
-  POSTGRES_HOST_AUTH_METHOD: echo $POSTGRES_HOST_AUTH_METHOD
-
 stages:
   - build
   - test
@@ -47,5 +38,5 @@ deploy donald:
     - mkdir -p ~/api-deployment # mkdir make folder api-deployment ~/ is under current user directory so for gitlab it would be /home/gitlab/api-deployment
     - rm -rf ~/api-deployment/* # rm remove -rf is recursive files from api-deployment
     - cp -r build/libs/. ~/api-deployment # cp - copy build/libs is where
-    - sudo service taltech-donald restart  # this requires sudo rights for gitlab user
+    - sudo service donald restart  # this requires sudo rights for gitlab user
 
