--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,3 +55,6 @@ connect:
     # official way to provide password to psql: http://www.postgresql.org/docs/9.3/static/libpq-envars.html
     - export PGPASSWORD=$POSTGRES_PASSWORD
     - psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
+  tags:
+    - donald
+
