--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,11 +32,12 @@ deploy donald:
   only:
     refs:
       - master
+      - feature/ci-cd
   tags:
     - donald
   script:
     - mkdir -p ~/api-deployment # mkdir make folder api-deployment ~/ is under current user directory so for gitlab it would be /home/gitlab/api-deployment
     - rm -rf ~/api-deployment/* # rm remove -rf is recursive files from api-deployment
     - cp -r build/libs/. ~/api-deployment # cp - copy build/libs is where
-    - service gitlab-runner restart
+    - systemctl restart gitlab-runner
 
