--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,8 +23,8 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/programm
     driverClassName: org.postgresql.Driver
-    username: runner
-    password: password
+    username: echo $POSTGRES_PASSWORD
+    password: echo $POSTGRES_USER
     platform: POSTGRES
 logging:
   file:
