--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ test donald:
   tags:
     - donald
   script:
+    - sed -i s/REPLACEPASSWORDHERE/$POSTGRES_PASSWORD/ src/main/resources/application.yaml
+    - sed -i s/REPLACEUSERNAMEHERE/$POSTGRES_USERNAME/ src/main/resources/application.yaml
     - ./gradlew check
 
 deploy donald:
