--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,8 +23,8 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/programm
     driverClassName: org.postgresql.Driver
-    username: echo $POSTGRES_PASSWORD
-    password: echo $POSTGRES_USER
+    username: REPLACEUSERHERE
+    password: REPLACEPASSWORDHERE
     platform: POSTGRES
 logging:
   file:
