--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ build donald:
   tags:
     - donald
   script:
+    - sed -i s/REPLACEPASSWORDHERE/$POSTGRES_PASSWORD/ src/main/resources/application.yaml
+    - sed -i s/REPLACEUSERNAMEHERE/$POSTGRES_USERNAME/ src/main/resources/application.yaml
     - ./gradlew assemble
 
 test donald:
