--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	runtimeOnly 'com.h2database:h2'
 
 	compile 'io.springfox:springfox-boot-starter:3.0.0'
+	compile 'org.apache.commons:commons-collections4:4.4'
+	compile 'org.apache.commons:commons-lang3:3.11'
 	compile 'org.springframework.boot:spring-boot-starter-mail'
+	compile 'io.jsonwebtoken:jjwt:0.9.1'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -26,6 +31,7 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
