--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,13 @@ services:
   database:
     image: postgres
     environment:
-      - POSTGRES_USERNAME=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=programm
-      - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_USERNAME: ${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      - POSTGRES_DB: ${POSTGRES_DB}
+      - PGDATA: /var/lib/postgresql/data/pgdata
     ports:
     - 5432:5432
+  donald:
+    image: songmeo/taltech-donald:latest
+    ports:
+      - 8080:8080
