--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,15 +4,11 @@ stages:
   - publish
   - deploy
 
-before_script:
-  - export GRADLE_USER_HOME=`pwd`/.gradle
-
 build donald:
   stage: build
   cache:
     paths:
-      - .gradle/wrapper
-      - .gradle/caches
+      - .gradle
   artifacts:
     paths:
       - build/libs
