--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   database:
     image: postgres
     environment:
-      - POSTGRES_USERNAME: ${POSTGRES_USERNAME}
-      - POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      - POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USERNAME: $POSTGRES_USERNAME
+      - POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      - POSTGRES_DB: $POSTGRES_DB
       - PGDATA: /var/lib/postgresql/data/pgdata
     ports:
     - 5432:5432
