--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 services:
   database:
     image: postgres
-    environment:
-      - POSTGRES_USERNAME: $POSTGRES_USERNAME
-      - POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      - POSTGRES_DB: $POSTGRES_DB
-      - PGDATA: /var/lib/postgresql/data/pgdata
     ports:
     - 5432:5432
   donald:
     image: songmeo/taltech-donald:latest
     ports:
       - 8080:8080
+variables:
+  POSTGRES_USERNAME: $POSTGRES_USERNAME
+  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+  POSTGRES_DB: $POSTGRES_DB
+  PGDATA: /var/lib/postgresql/data/pgdata
