--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: postgres
     ports:
     - 5432:5432
+    environment:
+      - POSTGRES_USERNAME: $POSTGRES_USERNAME
+      - POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      - POSTGRES_DB: $POSTGRES_DB
+      - PGDATA: /var/lib/postgresql/data/pgdata
   donald:
     image: songmeo/taltech-donald:latest
     ports:
       - 8080:8080
-variables:
-  POSTGRES_USERNAME: $POSTGRES_USERNAME
-  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-  POSTGRES_DB: $POSTGRES_DB
-  PGDATA: /var/lib/postgresql/data/pgdata
