--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     ports:
     - 5432:5432
     environment:
-       POSTGRES_USERNAME: $POSTGRES_USERNAME
-       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-       POSTGRES_DB: $POSTGRES_DB
-       PGDATA: /var/lib/postgresql/data/pgdata
+      - POSTGRES_USERNAME=$POSTGRES_USERNAME
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
+      - PGDATA=/var/lib/postgresql/data/pgdata
   donald:
     image: songmeo/taltech-donald:latest
     ports:
