--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  donald:
+    image: songmeo/taltech-donald:latest
+    ports:
+      - 8080:8080
+    depends_on:
+      - "database"
+    command: [ "./wait-for-it.sh", "database:5432" ]
   database:
     image: postgres
     ports:
@@ -9,9 +16,4 @@ services:
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
       - POSTGRES_DB=$POSTGRES_DB
       - PGDATA=/var/lib/postgresql/data/pgdata
-  donald:
-    image: songmeo/taltech-donald:latest
-    ports:
-      - 8080:8080
-    depends_on:
-      - "database"
+
