--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,6 @@ services:
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
       - POSTGRES_DB=$POSTGRES_DB
       - PGDATA=/var/lib/postgresql/data/pgdata
+    volumes:
+    - ./database:/var/lib/postgresql/data/pgdata
+
