--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: taltechdonalds@gmail.com
-    password: taltechdonalds2020
+    username: taltechdonalds2020@gmail.com
+    password: TaltechDonalds2020
     properties:
       mail:
         smtp:
@@ -16,7 +16,7 @@ spring:
         transport:
           protocol: smtp
         from:
-          email: taltechdonalds@gmail.com
+          email: taltechdonalds2020@gmail.com
 
   jackson:
     default-property-inclusion: non_null
