--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,5 @@ services:
       - POSTGRES_DB=$POSTGRES_DB
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
-    - /tmp/database:/var/lib/postgresql/data/pgdata
+    - ./database:/var/lib/postgresql/data/pgdata
 
